# re_wrappers_delight

./: .buildinfo  .gitchangelog.rc  .gitignore  AUTHORS  CHANGELIST  CHANGELOG.html  CHANGELOG.rst  CMakeLists.txt  MANIFEST  MANIFEST.in  Makefile  README.html  README.rst  _re2.pxd  environment.devenv.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  re2.cpp  re2.py  re2.pyx  requirements-cibw.txt  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  conda-dev.yml  conda.yml  main.yml  release.yml  sphinx.yml
_modules/: index.html
_modules/regex/: _regex_core.html
_sources/api/: modules.rst.txt  re2.rst.txt
_static/: documentation_options.js
api/: modules.html  re2.html
cmake/modules/: FindCython.cmake
conda.recipe/: adjust-test-file-paths.patch  conda-test_emptygroups.patch  meta.yaml
docs/source/: conf.py  index.rst
src/: CMakeLists.txt  _re2.pxd  _re2macros.h  compile.pxi  includes.pxi  match.pxi  pattern.pxi  re2.cpp  re2.pyx
tests/: charliterals.txt  count.txt  emptygroups.txt  findall.txt  finditer.txt  issue4.txt  match_expand.txt  mmap.txt  namedgroups.txt  performance.py  re_utils.py  search.txt  split.txt  sub.txt  test.py  test_emptygroups.txt  test_finditer.txt  test_mmap.txt  test_re.py  test_search.txt  test_sub.txt  unicode.txt
