[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=6.2",
    "Cython>=0.20",
    "pybind11>=2.11.1",
    "ninja; sys_platform != 'Windows'",
    "cmake>=3.18",
]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
