[metadata]
name = pyre2
version = attr: setuptools_scm.get_version
author = Andreas van Cranenburgh
author_email = andreas@unstable.nl
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = Python wrapper for Google RE2 library using Cython
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/andreasvc/pyre2
license = BSD
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Cython
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8

setup_requires =
    setuptools_scm[toml]

[options.extras_require]
test =
    pytest

perf =
    regex

[aliases]
test=pytest

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitchangelog.rc
    .gitignore
    conda/**
